--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         Ko'taramiz ko'nglingizni.
         Alloh rozi bo'lsin sizdan 
         Siz ham rozi bo'ling bizdan!</p>
+        <p>qizimga</p>
 </body>
 </html>
